Remove text-align since it does not correctly center the text on IE8

--- a/app/assets/stylesheets/bootstrap3.less
+++ b/app/assets/stylesheets/bootstrap3.less
@@ -155,5 +155,4 @@ h2 {
 
 .ie8-alert {
   .alert-danger;
-  text-align: center;
 }
